--- a/prometheus-openstack-exporter.yaml
+++ b/prometheus-openstack-exporter.yaml
@@ -6,6 +6,8 @@ listen_port: 9183
 cache_refresh_interval: 300  # In seconds
 cache_file: /var/cache/prometheus-openstack-exporter/mycloud
 cloud: mycloud
+poll_batch_size: 50
+
 openstack_allocation_ratio_vcpu: 2.5
 openstack_allocation_ratio_ram: 1.1
 openstack_allocation_ratio_disk: 1.0
