Optional deactivation of hard cert-checking
(Of course, not it will warn load in your logs)

--- a/prometheus-openstack-exporter.yaml
+++ b/prometheus-openstack-exporter.yaml
@@ -2,6 +2,8 @@
 # Copyright (C) 2016 Canonical, Ltd.
 #
 
+check_certs: false
+
 listen_port: 9183
 cache_refresh_interval: 300  # In seconds
 cache_file: /var/cache/prometheus-openstack-exporter/mycloud
